--- a/hugo.yaml
+++ b/hugo.yaml
@@ -19,6 +19,10 @@ params:
     - projects
 
   # theme params
+  matomo:
+    url: "https://futureofthe.tech/stats/"
+    id: 1
+
   DisableLanguageSwitch: true
   TocOpen: true
   TocSide: right
