--- a/hugo.yaml
+++ b/hugo.yaml
@@ -108,9 +108,12 @@ menu:
     - name: Posts
       url: /posts/
       weight: 3
+    - name: About me
+      url: /about/
+      weight: 4
     - name: Donate
       url: /donate/
-      weight: 4
+      weight: 5
 
 
 languages:
