--- a/config.toml
+++ b/config.toml
@@ -93,5 +93,5 @@ social = [
     { name = "telegram", url = "https://t.me/judemont" },
     { name = "matrix", url = "https://matrix.to/#/@judemont:matrix.org" },
     { name = "email", url = "mailto:julien@rmbi.ch" },
-    { name = "rss", url = "$BASE_URL/atom.xml" },
+    { name = "rss", url = "$BASE_URL/rss.xml" },
 ]
