--- a/config.toml
+++ b/config.toml
@@ -80,6 +80,7 @@ A world that would benefit all of humanity.
 
 I believe that many people are aware of these issues. My goal is to imagine solutions.
 
+![My setup](images/setup.jpg)
 """
 
 # Social icons.
