--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ menu = [
     { url = "$BASE_URL/about/", name = "About" },
 
     { url = "$BASE_URL/projects/", name = "Projects" },
-    { url = "$BASE_URL/posts/", name = "Blog" },
+    { url = "$BASE_URL/posts/", name = "Articles" },
     { url = "$BASE_URL/bookmarks/", name = "Bookmarks" },
 
     { url = "$BASE_URL/donate/", name = "Donate" },
